Create squares working. However, forecast not working properly

--- a/client/src/components/EquipmentDetailRow/style.css
+++ b/client/src/components/EquipmentDetailRow/style.css
@@ -5,3 +5,19 @@
   border-radius: 5px;
   margin: auto;
 }
+
+.white {
+  background-color: white;
+}
+
+.green {
+  background-color: green;
+}
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
